Finished Data Structures
Makefile it's now working properly, it's straightforward
Created data_structures.hpp, where it contains the include of pool and data_buffer
Finished data_buffer.cpp and .hpp where they will deserialize and serialize the objects through the operator << and >>

--- a/libftpp/Makefile
+++ b/libftpp/Makefile
@@ -1,53 +1,38 @@
 NAME		= libftpp.a
 LIBCPP		= ar rc
 CXX			= c++
-RM			= rm -f
+RM			= rm -rf
 CXXFLAGS	= -Wall -Wextra -Werror -pedantic -std=c++11
 
-INC_DIRS	= -I ./inc/ \
-					-I ./data_struct/inc/ \
-					-I ./design_patterns/inc/ \
-					-I ./network/inc/ \
-					-I ./thread/inc/
+INC			= -I ./inc/
 
-SRC_DIR		= ./data_struct/src/ \
-					./design_patterns/src/ \
-					./network/src/ \
-					./thread/src/
-
-# DATA_DIR	= data_struct/src/
-# DESIGN_DIR	= design_patterns/src/
-# NET_DIR		= network/src/
-# THREAD_DIR	= thread/src/
-# 
-# DATA		= data_struct.cpp
-# 
-# DATA_SRC	= $(addprefix $(DATA_DIR), $(DATA))
+SRC_DIR		= ./src/
 
 
 OBJ_DIR		= ./obj/
 
+SRCS		= data_buffer.cpp
 
-
-# SRC			= $(DATA_SRC)
-SRCS		= $(shell find $(SRC_DIR) -name '*.cpp')
-OBJS		= $(patsubst %.cpp, $(OBJ_DIR)%.o, $(SRCS))
-# OBJ			= $(addprefix $(OBJ_DIR)/, $(SRC:.cpp=.o))
+SRC			= $(addpredix $(SRC_DIR), $(SRCS))
+OBJS		= $(SRCS:.cpp=.o)
+OBJ			= $(addprefix $(OBJ_DIR), $(OBJS))
 
 
 all: ${NAME}
 
-${NAME}: ${OBJS}
-	${LIBCPP} ${NAME} ${OBJS}
+${NAME}: ${OBJ}
+	${LIBCPP} ${NAME} ${OBJ}
 
+$(OBJ): | $(OBJ_DIR)
+$(OBJ_DIR)%.o: $(SRC_DIR)%.cpp
+	$(CXX) $(CXXFLAGS) -c $< -o $@ $(INC)
 
-$(OBJ_DIR)%.o: %.cpp
-	mkdir -p $(dir $@)
-	$(CXX) $(CXXFLAGS) -c $< -o $@ $(INC_DIRS)
+$(OBJ_DIR):
+	mkdir -p $(OBJ_DIR)
 
 
 clean:
-	${RM} ${OBJ}
+	${RM} ${OBJ_DIR}
 
 fclean: clean
 	${RM} ${NAME}
