--- a/libftpp/Makefile
+++ b/libftpp/Makefile
@@ -11,7 +11,8 @@ SRC_DIR		= ./src/
 
 OBJ_DIR		= ./obj/
 
-SRCS		= data_buffer.cpp
+SRCS		= data_buffer.cpp \
+				memento.cpp
 
 SRC			= $(addpredix $(SRC_DIR), $(SRCS))
 OBJS		= $(SRCS:.cpp=.o)
