Done the thread Also forgot to put the thread_safe_iostream.hpp in the libftpp.hpp

--- a/libftpp/Makefile
+++ b/libftpp/Makefile
@@ -12,7 +12,8 @@ SRC_DIR		= ./src/
 OBJ_DIR		= ./obj/
 
 SRCS		= data_buffer.cpp \
-				memento.cpp
+				memento.cpp \
+				thread_safe_iostream.cpp
 
 SRC			= $(addpredix $(SRC_DIR), $(SRCS))
 OBJS		= $(SRCS:.cpp=.o)
