--- a/libftpp/Makefile
+++ b/libftpp/Makefile
@@ -13,7 +13,8 @@ OBJ_DIR		= ./obj/
 
 SRCS		= data_buffer.cpp \
 				memento.cpp \
-				thread_safe_iostream.cpp
+				thread_safe_iostream.cpp \
+				thread.cpp
 
 SRC			= $(addpredix $(SRC_DIR), $(SRCS))
 OBJS		= $(SRCS:.cpp=.o)
