Some progress done to the client Added some stuff to message and I am just missing the update for the client

--- a/libftpp/Makefile
+++ b/libftpp/Makefile
@@ -17,7 +17,8 @@ SRCS		= data_buffer.cpp \
 				thread.cpp \
 				worker_pool.cpp \
 				persistent_worker.cpp \
-				message.cpp
+				message.cpp \
+				client.cpp
 
 SRC			= $(addpredix $(SRC_DIR), $(SRCS))
 OBJS		= $(SRCS:.cpp=.o)
