Finished the PRNG

--- a/libftpp/Makefile
+++ b/libftpp/Makefile
@@ -21,7 +21,8 @@ SRCS		= data_buffer.cpp \
 				client.cpp \
 				server.cpp \
 				ivector2.cpp \
-				ivector3.cpp
+				ivector3.cpp \
+				random_2D_coordinate_generator.cpp
 
 SRC			= $(addpredix $(SRC_DIR), $(SRCS))
 OBJS		= $(SRCS:.cpp=.o)
